# stuff

./: README.md
ChomboVis/: Makefile.am  Makefile.in  README  chombovis.template  configure  configure.in  user.make
ChomboVis/EBLib/: CVPolygon.C  CVPolygon.h  CellIntersection.C  CellIntersection.h  ConnectedHexahedron.C  ConnectedHexahedron.h  EB2DVolumeCalculator.C  EB2DVolumeCalculator.h  EB3DVolumeCalculator.C  EB3DVolumeCalculator.h  EBCache.C  EBCache.h  EBCapper.C  EBCapper.h  EBFindPlane.C  EBFindPlane.h  EBSingleCell.C  EBSingleCell.h  EBSurfaceLib.C  EBSurfaceLib.h  EBVolumeCalculator.C  EBVolumeCalculator.h  Hexahedron.C  Hexahedron.h  KIJVector.C  KIJVector.h  LineSegment.C  LineSegment.h  Makefile.am  Makefile.in  Plane.C  Plane.h  Point.C  Point.h  Tetrahedron.C  Tetrahedron.h
ChomboVis/Vtk/: CMakeLists.txt  Makefile.am  Makefile.in  VTKChomboConfigure.h.in  pkgIndex.tcl.in  vtkAMRStreamSource.cxx  vtkAMRStreamSource.h  vtkAMRVolume.cxx  vtkAMRVolume.h  vtkBBoxSource.cxx  vtkBBoxSource.h  vtkChomboAccumulatePolyData.cxx  vtkChomboAccumulatePolyData.h  vtkChomboEmbeddedBoundaryFilter.cxx  vtkChomboEmbeddedBoundaryFilter.h  vtkChomboLookupTable.cxx  vtkChomboLookupTable.h  vtkChomboOutlineSource.cxx  vtkChomboOutlineSource.h  vtkChomboParticles.cxx  vtkChomboParticles.h  vtkChomboPlaneSource.cxx  vtkChomboPlaneSource.h  vtkChomboRawGL.cxx  vtkChomboRawGL.h  vtkChomboReader.cxx  vtkChomboReader.h  vtkChomboTexture.cxx  vtkChomboTexture.h  vtkMattSlicer.cxx  vtkMattSlicer.h  vtkRayBuilder.cxx  vtkRayBuilder.h
ChomboVis/VtkImpl/: vtkAMRStreamSourceImpl_cxx  vtkAMRStreamSourceImpl_h  vtkAMRVolumeImpl_cxx  vtkAMRVolumeImpl_h  vtkArray.h  vtkChomboParticlesImpl_cxx  vtkChomboParticlesImpl_h  vtkChomboReaderImpl_cxx  vtkChomboReaderImpl_h
ChomboVis/chombo_bridge/: Makefile.am  Makefile.in  bridge_module.cpp  bridge_module.h  void_pointers.h
ChomboVis/data/: Makefile.am  Makefile.in  blue.cmap  color.cmap  red.cmap  reverse.cmap
ChomboVis/data_access/: ArgForDummyTemplateInstantiation.h  Ascii2HDF5.cpp  Ascii2HDF5.h  Box.cpp  Box.h  BoxLayout.cpp  BoxLayout.h  BoxLayoutData.cpp  BoxLayoutData.h  ChomboBridge.cpp  ChomboBridge.h  ChomboBridge_unittest.cpp  ChomboHDF5.cpp  ChomboHDF5.h  ChomboHDF5_subclasses.cpp  ChomboHDF5_subclasses.h  ChomboHDF5_unittest.cpp  FAB.cpp  FAB.h  FABAccess.h  Intvect.cpp  Intvect.h  LtdlModule.cpp  LtdlModule.h  Makefile.am  Makefile.in  NormalNumberComparator.h  PointerHandleMap.cpp  PointerHandleMap.h  PointerHandleMap.hImpl  VisDat_unittest.cpp  VisualizableDataset.cpp  VisualizableDataset.h  ascii2hdf5-main.cpp  dollar.star  no_unittests.sh  unittests.sh
ChomboVis/doc/: API.htsrc  Architecture.htsrc  Command_line.htsrc  Contact_info.htsrc  Data_browser.htsrc  FAQ.htsrc  File_format.htsrc  Installation.htsrc  Introduction.htsrc  Makefile.am  Makefile.in  Menus.htsrc  Other_features.htsrc  Release_notes.htsrc  UsersGuide.htsrc  Visualization.htsrc  big_picture.dot  digraph.py  digraph_test.sh  frame1.html  frame2.htsrc  frame2ctrl.htsrc  gen_frame1.py  make_doc.sh  memory_management.htsrc  python_big_picture.dot  text2html.py  upcaseStyle.py
ChomboVis/examples/: Makefile.am  Makefile.in  bounding_boxes.py  browser.py  bulldog.py  count_cells.py  lineplot.py  lineplot_multifile.py  loadhdf5_test.py  movie.py  moving_slice.py  newcomp.py  newhdf5_into_slave.sh  readermemleaktest.py  resetcamera.py  saturn.py  slice.py  time_test.py  timestamped_movie.py  undo.py  visdat_test.py  visdat_unittest.py
ChomboVis/premake/: Makefile.am  Makefile.in  checkmacosxenv.sh  copy_stuff.sh
ChomboVis/src_py/: Makefile.am  Makefile.in  add_infile.py  algorithms.py  anag_box_clipper.py  anag_megawidgets.py  anag_utils.py  annotation_api.py  box.py  box_layout.py  box_layout_data.py  chombovis.py  clip_api.py  cmap_api.py  cmd_line.py  control_annotation.py  control_cameras.py  control_clip.py  control_cmap.py  control_data.py  control_eb.py  control_fab_tables.py  control_grid.py  control_iso.py  control_particles.py  control_print.py  control_slice.py  control_stream.py  control_vol.py  dialog_inventory.py  eb_api.py  fixup_version_number.sh  grid_api.py  iso_api.py  main.py  menubar.py  misc_api.py  module_maker.py  network_api.py  notifier.py  (+31 more)
ChomboVis/test/: Makefile.am  Makefile.in  api_test.py  api_test.sh  clip_against_isosurface.py  cmdline_test.py  cmdline_test.sh  module_maker_test.sh  test_all.sh  time_test.sh
ChomboVis/utils/: BoxFinder.cpp  BoxFinder.h  Consts.cpp  Consts.h  HeteroMap.h  HeteroMap.hImpl  Makefile.am  Makefile.in  Misc.h  Misc.hImpl  OORegexp.h  RectanglePacker.cpp  RectanglePacker.h  SemiSymmetricMap.h  SemiSymmetricMap.hImpl  StatusCodes.cpp  StatusCodes.h  StrUtils.h  Timer.cpp  Trace.cpp  Trace.h  Trace.hImpl  VectorFunctor.h  argmap.cpp  argmap.h  ch_config.h  chomboSetGet.h  cmdline.cpp  cmdline.h  cmdline_base.cpp  cmdline_base.h  cmdline_var_info.txt  generate_cmdline.py  ostream_stdio_adaptor.cpp  ostream_stdio_adaptor.h
ChomboVis/wrap/: hints
astro/: Makefile.am  Makefile.in  README  agenda.txt  configure  configure.in  install-sh  zap
fingers/: Makefile.in  configure  configure.in  ltmain.sh  missing
mailserver/: Makefile.am  cmdline_var_info.txt  configure.in  mailclient.cpp  mailclient.hpp  mailserver-main.cpp  mailserver.cpp  mailserver.hpp  make-dependencies.sh  myregexp.cpp  myregexp.hpp
parking/: Makefile.am  bargraph.gp  bargraph.sh  cmdline_var_info.txt  configure.in  parking.cpp  parking.hpp  testme.sh  zap
puns/: AUTHORS  Makefile.am  Makefile.in  NEWS  agenda.txt  bootstrap  configure  configure.in  zap
rubic/: CMakeLists.txt  README  VTKRubicConfigure.h.in  gopython.sh  initrubic.py  main.cxx  metamakefile  orbitlength.cpp  primes.cpp  primes.h  random_turns.cpp  rubic.cxx  rubic.h  rubic.h_impl  unittest.cpp  vtkRubicPythonIface.cxx  vtkRubicPythonIface.h  vtk_stuff.cxx  vtk_stuff.h  vtk_stuff.h_impl
tus/: bootstrap  configure.in  zap
utils/: Makefile.am  Makefile.in  bootstrap  configure  configure.in  zap
wax/: Makefile.am  Makefile.in  bootstrap  configure  configure.in
(+1435 files in other folders)
