AC_INIT(utils, 1.3.0)
AM_INIT_AUTOMAKE(utils, 1.3.0)
##AC_DISABLE_STATIC
AC_PROG_CXX
AC_PROG_LIBTOOL
AC_PROG_INSTALL()

AC_SUBST( KDFLAGS )
AC_SUBST( KPPFLAGS )

AC_ARG_ENABLE(debug,
    [AC_HELP_STRING( [--enable-debug],
                     [default=no])],
    [case "$enableval" in
        yes) KPPFLAGS="-g -O0";;
        no) KPPFLAGS=-O2 ;;
        *) AC_MSG_ERROR(bad value $withval for --enable-debug) ;;
    esac],
    [KPPFLAGS=-O2]
)

# If you want profiling, then above you also have to say "AC_DISABLE_SHARED".
AC_ARG_ENABLE(profile,
    [AC_HELP_STRING( [--enable-profile],
                     [Sets CFLAGS et al to -pg])],
    [case "$enableval" in
        yes) KPPFLAGS="$KPPFLAGS -pg" ; KDFLAGS=" -pg" ;;
        no) ;;
        *) AC_MSG_ERROR(bad value $withval for --enable-profile) ;;
    esac],
)


AC_ARG_ENABLE(hello,
[  --enable-hello    Build hello program],
[case "${enableval}" in
  yes) hello=true ;;
  no)  hello=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-hello) ;;
esac],[hello=false])
AM_CONDITIONAL(HELLO, test x$hello = xtrue)

AC_OUTPUT(Makefile src/Makefile test/Makefile)
