AC_INIT(wax,1.8.0)
AC_CONFIG_AUX_DIR(.)
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE(wax,1.8.0)
AC_DISABLE_STATIC
AC_PROG_CXX
AC_PROG_LIBTOOL
AC_PROG_INSTALL(wax)

AC_SUBST( KPPFLAGS )
AC_SUBST( KDFLAGS )

AC_ARG_ENABLE(debug,
    [AC_HELP_STRING( [--enable-debug],
                     [default=no])],
    [case "$enableval" in
        yes) KPPFLAGS=-g ;;
        no) KPPFLAGS=-O3 ;;
        *) AC_MSG_ERROR(bad value $withval for --enable-debug) ;;
    esac],
    [KPPFLAGS=-O3]
)

# If you want profiling, then above you also have to say "AC_DISABLE_SHARED".
AC_ARG_ENABLE(profile,
    [AC_HELP_STRING( [--enable-profile],
                     [Sets CFLAGS et al to -pg])],
    [case "$enableval" in
        yes) KPPFLAGS="$KPPFLAGS -pg" ; KDFLAGS=" -pg" ;;
        no) ;;
        *) AC_MSG_ERROR(bad value $withval for --enable-profile) ;;
    esac],
)

AC_OUTPUT(Makefile src/Makefile test/Makefile data/Makefile)
