EXTRA_py_DATA = $(wildcard *.py)
movie_SCRIPTS = movie.py              # It has the x bit turned on.
EXTRA_data_DATA = $(wildcard *.dat)

EXTRA_pydir = $(pkgdatadir)/examples
EXTRA_datadir = $(pkgdatadir)/examples
moviedir = $(pkgdatadir)/examples

EXTRA_modulemaker_DATA = $(wildcard $(srcdir)/module_maker/*)
EXTRA_modulemakerdir = $(pkgdatadir)/examples/module_maker

EXTRA_DIST = $(srcdir)/*.py $(srcdir)/*.dat $(srcdir)/module_maker/*.cpp $(srcdir)/module_maker/*.h $(srcdir)/*.sh\
             $(srcdir)/module_maker/GNUmakefile $(srcdir)/module_maker/Readme $(srcdir)/module_maker/runit.py
